--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,19 @@
         <spring-boot-starter-data-jpa.version>3.1.1</spring-boot-starter-data-jpa.version>
         <postgresql.version>42.6.0</postgresql.version>
         <com.h2database.version>2.2.224</com.h2database.version>
-<!--        <software.version>2.20.109</software.version>-->
+        <jackson-databind.version>2.16.0</jackson-databind.version>
 <!--        <spring-cloud-starter-openfeign.version>4.0.3</spring-cloud-starter-openfeign.version>-->
 <!--        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>-->
-<!--        <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>-->
+        <com.google.code.gson.version>2.10.1</com.google.code.gson.version>
 <!--        <hibernate-core.version>6.1.7.Final</hibernate-core.version>-->
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${com.google.code.gson.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -52,6 +57,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
