--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
 server:
   port : 8181
 
+serialization:
+  file: C:\Users\admin\IdeaProjects\coliseum\src\main\resources\savings\users.json
+
 gladiators:
   hoplomachus:
     health: 100
