--- a/pom.xml
+++ b/pom.xml
@@ -31,27 +31,23 @@
         <postgresql.version>42.6.0</postgresql.version>
         <com.h2database.version>2.2.224</com.h2database.version>
         <jackson-databind.version>2.16.0</jackson-databind.version>
-<!--        <spring-cloud-starter-openfeign.version>4.0.3</spring-cloud-starter-openfeign.version>-->
+        <spring-boot-starter-web.version>3.2.0</spring-boot-starter-web.version>
 <!--        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>-->
-        <com.google.code.gson.version>2.10.1</com.google.code.gson.version>
+<!--        <com.google.code.gson.version>2.10.1</com.google.code.gson.version>-->
 <!--        <hibernate-core.version>6.1.7.Final</hibernate-core.version>-->
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${com.google.code.gson.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-starter-web.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${com.h2database.version}</version>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
