--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.0</version>
-        <relativePath/>
     </parent>
 
     <properties>
@@ -31,7 +30,7 @@
         <postgresql.version>42.6.0</postgresql.version>
         <com.h2database.version>2.2.224</com.h2database.version>
         <jackson-databind.version>2.16.0</jackson-databind.version>
-        <spring-boot-starter-web.version>3.2.0</spring-boot-starter-web.version>
+<!--        <spring-boot-starter-web.version>3.2.0</spring-boot-starter-web.version>-->
 <!--        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>-->
 <!--        <com.google.code.gson.version>2.10.1</com.google.code.gson.version>-->
 <!--        <hibernate-core.version>6.1.7.Final</hibernate-core.version>-->
@@ -41,7 +40,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot-starter-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
